--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.yanghaibooo.firstcode">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -12,10 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".two.HelloWorld"></activity>
-        <activity android:name=".one.HelloWorldActivity" />
-        <activity android:name=".night.MediaActivity" />
 
+        <activity android:name=".night.MediaActivity" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.yanghaibooo.firstcode.night.fileprovider"
@@ -29,9 +28,32 @@
         <activity android:name=".night.CameraActivity" />
         <activity android:name=".night.NotificationMainActivity" />
         <activity android:name=".night.NotificationActivity" />
+
         <activity android:name=".eight.ContactActivity" />
         <activity android:name=".eight.RuntimePermissionActivity" />
-        <activity android:name=".FirstActivity" />
+
+        <activity android:name=".three.ThirdActivity">
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".three.SecondActivity"
+            android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="com.yanghaibooo.firstcode.three.ACTION_START" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.yanghaibooo.firstcode.three.MY_CATEGORY" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".three.FirstActivity" />
+
+        <activity android:name=".two.HelloWorld" />
+
+        <activity android:name=".one.HelloWorldActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
