--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".five.fragment_practice.NewsContentActivity"></activity>
+        <activity android:name=".five.fragment_practice.MainActivity" />
+        <activity android:name=".five.fragment.MainActivity" />
+        <activity android:name=".five.MainFiveActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,6 +58,7 @@
         <activity android:name=".night.CameraActivity" />
         <activity android:name=".night.NotificationMainActivity" />
         <activity android:name=".night.NotificationActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.yanghaibooo.firstcode.night.fileprovider"
